--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">JSONExample</string>
+    <string name = "User_name">Login.loggedin.Getname()</string>
 </resources>
