- Added Recipe class - Added RecyclerView and Adapter Classes - Added Design for Main Page - Modified the API to convert JSON to Java Object

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">JSONExample</string>
-    <string name = "User_name">Login.loggedin.Getname()</string>
+    <string name="app_name">RecipeMe</string>
+
 </resources>
