--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">RecipeMe</string>
+    <string name="title_activity_recipe_details">RecipeDetails</string>
+    <string name="title_activity_main">MainActivity</string>
 
 </resources>
